--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <div class="container">
             <h2>Agenda de Shows</h2>
             <ul>
-                <li>Estádio Principality, Cardiff - 4 e 5 de julho &#127466;&#127463;</li> <!-- 🇬🇧 -->
-                <li>Heaton Park, Manchester - 11, 12, 19 e 20 de julho &#127466;&#127463;</li> <!-- 🇬🇧 -->
-                <li>Estádio Wembley, Londres - 25 e 26 de julho / 2 e 3 de agosto &#127466;&#127463;</li> <!-- 🇬🇧 -->
-                <li>Estádio Scottish Gas Murrayfield, Edimburgo - 8 e 9 de agosto &#127466;&#127463;</li> <!-- 🇬🇧 -->
-                <li>Croke Park, Dublin - 16 e 17 de agosto &#127466;&#127475;</li> <!-- 🇮🇪 -->
+                <li>Estádio Principality, Cardiff - 4 e 5 de julho</li> 
+                <li>Heaton Park, Manchester - 11, 12, 19 e 20 de julho</li> 
+                <li>Estádio Wembley, Londres - 25 e 26 de julho / 2 e 3 de agosto</li> 
+                <li>Estádio Scottish Gas Murrayfield, Edimburgo - 8 e 9 de agosto</li>
+                <li>Croke Park, Dublin - 16 e 17 de agosto</li>
             </ul>
         </div>
     </section>
